--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.7",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^9.0.3",
@@ -37,7 +38,8 @@
     "build-dev": "webpack  --config ./webpack.dev.js --open",
     "build-dev-server": "webpack-dev-server  --config ./webpack.dev.js --open",
     "build-prod": "webpack --config ./webpack.prod.js",
-    "launch": "webpack --config ./webpack.prod.js && node src/server/server.js"
+    "launch": "webpack --config ./webpack.prod.js && node src/server/server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
